--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -63,7 +63,7 @@ database_path = config['input_manager']['database_path']
 
 ### Define rules where samtools is necessary
 
-TOOLS_WITH_SAM_OUTPUT = ["cdiffkmeraligner"]
+TOOLS_WITH_SAM_OUTPUT = ["Cdiff_KMA_Toxin"]
 
 ##############################################################################
 #
@@ -82,10 +82,10 @@ rule all:
             ]
         ),
         expand(
-            "%s/{sample}/cdiffkmeraligner/{sample}.sam" % OUT_FOLDER,
+            "%s/{sample}/Cdiff_KMA_Toxin/{sample}.sam" % OUT_FOLDER,
             sample=[
                 s for s in SAMPLES 
-                if species_configs[sample_to_organism[s]]["analyses_to_run"]["cdiffkmeraligner"]["status"] is True
+                if species_configs[sample_to_organism[s]]["analyses_to_run"]["Cdiff_KMA_Toxin"]["status"] is True
             ]
         ),
         expand(
@@ -175,7 +175,15 @@ rule all:
             out=OUT_FOLDER
         ),
         expand(
-            "%s/{sample}/{tool}/{sample}.filtered.bam" % OUT_FOLDER,
+            "{out}/{sample}/skesa", 
+            sample=[
+                s for s in SAMPLES 
+                if species_configs[sample_to_organism[s]]["analyses_to_run"]["skesa"]["status"] is True
+            ],
+            out=OUT_FOLDER
+        ),
+        expand(
+            "%s/{sample}/FilteredBAM/{sample}.{tool}.filtered.bam" % OUT_FOLDER,
             sample=[
                 s for s in SAMPLES
                 for tool in TOOLS_WITH_SAM_OUTPUT
@@ -185,37 +193,31 @@ rule all:
             tool=TOOLS_WITH_SAM_OUTPUT
         ),
         expand(
-            "%s/{sample}/{tool}/{sample}.filtered.sorted.bam" % OUT_FOLDER,
+            "%s/{sample}/FilteredBAM/{sample}.{tool}.filtered.sorted.bam" % OUT_FOLDER,
             sample=[
                 s for s in SAMPLES
                 for tool in TOOLS_WITH_SAM_OUTPUT
                 if species_configs[sample_to_organism[s]]["analyses_to_run"][tool]["status"] is True
-                and species_configs[sample_to_organism[s]]["analyses_to_run"]["samtools_view"]["status"] is True
                 and species_configs[sample_to_organism[s]]["analyses_to_run"]["samtools_sort"]["status"] is True
             ],
             tool=TOOLS_WITH_SAM_OUTPUT
         ),
         expand(
-            "%s/{sample}/{tool}/{sample}.filtered.sorted.bam.bai" % OUT_FOLDER,
+            "%s/{sample}/FilteredBAM/{sample}.{tool}.filtered.sorted.bam.bai" % OUT_FOLDER,
             sample=[
                 s for s in SAMPLES
                 for tool in TOOLS_WITH_SAM_OUTPUT
                 if species_configs[sample_to_organism[s]]["analyses_to_run"][tool]["status"] is True
-                and species_configs[sample_to_organism[s]]["analyses_to_run"]["samtools_view"]["status"] is True
-                and species_configs[sample_to_organism[s]]["analyses_to_run"]["samtools_sort"]["status"] is True
                 and species_configs[sample_to_organism[s]]["analyses_to_run"]["samtools_idx"]["status"] is True
             ],
             tool=TOOLS_WITH_SAM_OUTPUT
         ),
         expand(
-            "%s/{sample}/{tool}/{sample}.calls.bcf" % OUT_FOLDER,
+            "%s/{sample}/GenotypeCalls/{sample}.{tool}.calls.bcf" % OUT_FOLDER,
             sample=[
                 s for s in SAMPLES
                 for tool in TOOLS_WITH_SAM_OUTPUT
                 if species_configs[sample_to_organism[s]]["analyses_to_run"][tool]["status"] is True
-                and species_configs[sample_to_organism[s]]["analyses_to_run"]["samtools_view"]["status"] is True
-                and species_configs[sample_to_organism[s]]["analyses_to_run"]["samtools_sort"]["status"] is True
-                and species_configs[sample_to_organism[s]]["analyses_to_run"]["samtools_idx"]["status"] is True
                 and species_configs[sample_to_organism[s]]["analyses_to_run"]["bcftools_genotypecall"]["status"] is True
             ],
             tool=TOOLS_WITH_SAM_OUTPUT
