--- a/workflow/configs_species/C.diff.yaml
+++ b/workflow/configs_species/C.diff.yaml
@@ -124,3 +124,8 @@ analyses_to_run:
         status : True
         Title : bcftools mpileup | bcftools call
         ID: 91
+
+    bcftools_index:
+        status : True
+        Title : bcftools index
+        ID: 91
