Added Legionella config and all Nmeningitidis functionality with test data

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -78,6 +78,12 @@ analysis_settings:
 
     mlst:
         yaml : ../envs/mlst.yaml
+
+    meningotype:
+        yaml : ../envs/meningotype.yaml
+    
+    SB_summary:
+        yaml : ../envs/SB_summary.yaml
             
     # Illumina lineage determination (commented out for now):
     # reference_fasta_file: /home/simonescrima/Desktop/ssi_analysis_utility/resources/lineage_determination/MGAS5005.fasta  # Fasta file for reference genome
