--- a/workflow/configs_species/Nmeningitidis.yaml
+++ b/workflow/configs_species/Nmeningitidis.yaml
@@ -6,7 +6,7 @@
 analyses_to_run: 
 
     kmeraligner:
-        status : True
+        status : False
         Title : Kmer Aligner on two pair reads
         ID: 90
         additional_option : -matrix 
@@ -33,19 +33,19 @@ analyses_to_run:
         Title: Presence of Streptococcal virulence genes from the Virulence Factor Database
 
     plasmidfinder: 
-        status : True
+        status : False
         Title : Plasmidfinder
         database: resources/plasmidfinder_db/  # Path to PlasmidFinder database
 
     resfinder: 
-        status : True 
+        status : False 
         Title : Resfinder
         resfinder_db: resources/resfinder_db/ # ResFinder database for AMR detection
         pointfinder_db: resources/pointfinder_db/  # PointFinder database for AMR point mutations
         disinfinder_db: resources/disinfinder_db/  # DisinFinder database for disinfectant resistance
 
     virulencefinder : 
-        status : True
+        status : False
         Title : Virulence finder
         database: resources/virulencefinder_db  # VirulenceFinder database
 
@@ -82,12 +82,19 @@ analyses_to_run:
     amrfinder:
         status : True
         Title : NCBI resistance gene finder
-        organism: --organism Escherichia # Leave blank or insert --organism alongside one of the supported organisms, listed here: https://github.com/evolarjun/amr/wiki/Curated-organisms
+        organism: --organism Neisseria_meningitidis # Leave blank or insert --organism alongside one of the supported organisms, listed here: https://github.com/evolarjun/amr/wiki/Curated-organisms
 
     mlst:
         status : True
         Title : MLST by Torsten Seeman
 
+    Legionella_SBT:
+        status : False
+        Title : Legionella Sequence Based Typing
+
+    lag1_detection:
+        status : False
+        Title : Detection of lag1 gene in Legionella
 
     meningotype:
         status : True
