--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -153,6 +153,22 @@ rule all:
             ],
             out=OUT_FOLDER
         ),
+        expand(
+            "{out}/{sample}/Legionella_SBT", 
+            sample=[
+                s for s in SAMPLES 
+                if species_configs[sample_to_organism[s]]["analyses_to_run"]["Legionella_SBT"]["status"] is True
+            ],
+            out=OUT_FOLDER
+        ),
+        expand(
+            "{out}/{sample}/lag1_detection", 
+            sample=[
+                s for s in SAMPLES 
+                if species_configs[sample_to_organism[s]]["analyses_to_run"]["lag1_detection"]["status"] is True
+            ],
+            out=OUT_FOLDER
+        ),
 
 include : "rules/db_setups.smk"
 include : "rules/finders.smk"
