--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -65,6 +65,34 @@ database_path = config['input_manager']['database_path']
 
 TOOLS_WITH_SAM_OUTPUT = ["Cdiff_KMA_Toxin"]
 
+# ------------------ BAM BAI targets generated automatically ------------------
+
+bam_bai_targets = expand(
+    "{folder}/{sample}/FilteredBAM/{sample}.{tool}.filtered.sorted.bam.bai",
+    folder=OUT_FOLDER,
+    sample=[
+        s for s in SAMPLES
+        for tool in TOOLS_WITH_SAM_OUTPUT
+        if species_configs[sample_to_organism[s]]["analyses_to_run"][tool]["status"] is True
+        and species_configs[sample_to_organism[s]]["analyses_to_run"]["samtools_idx"]["status"] is True
+    ],
+    tool=TOOLS_WITH_SAM_OUTPUT
+)
+
+# ------------------ BCF Index (.bcf.csi) Targets ------------------ #
+
+bcf_csi_targets = expand(
+    "{folder}/{sample}/GenotypeCalls/{sample}.{tool}.{tag}.bcf.csi",
+    folder=OUT_FOLDER,
+    sample=[
+        s for s in SAMPLES
+        for tool in TOOLS_WITH_SAM_OUTPUT
+        if species_configs[sample_to_organism[s]]["analyses_to_run"][tool]["status"] is True
+        and species_configs[sample_to_organism[s]]["analyses_to_run"]["bcftools_index"]["status"] is True
+    ],
+    tool=TOOLS_WITH_SAM_OUTPUT,
+    tag=["mpileup", "calls"]  #this enables indexing of all bcf files
+)
 ##############################################################################
 #
 #                              Snakefile 
@@ -183,55 +211,22 @@ rule all:
             out=OUT_FOLDER
         ),
         expand(
-            "%s/{sample}/FilteredBAM/{sample}.{tool}.filtered.bam" % OUT_FOLDER,
-            sample=[
-                s for s in SAMPLES
-                for tool in TOOLS_WITH_SAM_OUTPUT
-                if species_configs[sample_to_organism[s]]["analyses_to_run"][tool]["status"] is True
-                and species_configs[sample_to_organism[s]]["analyses_to_run"]["samtools_view"]["status"] is True
-            ],
-            tool=TOOLS_WITH_SAM_OUTPUT
-        ),
-        expand(
-            "%s/{sample}/FilteredBAM/{sample}.{tool}.filtered.sorted.bam" % OUT_FOLDER,
-            sample=[
-                s for s in SAMPLES
-                for tool in TOOLS_WITH_SAM_OUTPUT
-                if species_configs[sample_to_organism[s]]["analyses_to_run"][tool]["status"] is True
-                and species_configs[sample_to_organism[s]]["analyses_to_run"]["samtools_sort"]["status"] is True
-            ],
-            tool=TOOLS_WITH_SAM_OUTPUT
-        ),
-        expand(
-            "%s/{sample}/FilteredBAM/{sample}.{tool}.filtered.sorted.bam.bai" % OUT_FOLDER,
-            sample=[
-                s for s in SAMPLES
-                for tool in TOOLS_WITH_SAM_OUTPUT
-                if species_configs[sample_to_organism[s]]["analyses_to_run"][tool]["status"] is True
-                and species_configs[sample_to_organism[s]]["analyses_to_run"]["samtools_idx"]["status"] is True
-            ],
-            tool=TOOLS_WITH_SAM_OUTPUT
-        ),
-        expand(
             "%s/{sample}/GenotypeCalls/{sample}.{tool}.calls.bcf" % OUT_FOLDER,
-            sample=[
-                s for s in SAMPLES
-                for tool in TOOLS_WITH_SAM_OUTPUT
-                if species_configs[sample_to_organism[s]]["analyses_to_run"][tool]["status"] is True
-                and species_configs[sample_to_organism[s]]["analyses_to_run"]["bcftools_genotypecall"]["status"] is True
-            ],
+            sample=[s for s in SAMPLES for tool in TOOLS_WITH_SAM_OUTPUT
+                    if species_configs[sample_to_organism[s]]["analyses_to_run"][tool]["status"] is True],
             tool=TOOLS_WITH_SAM_OUTPUT
         ),
         expand(
-            "%s/{sample}/GenotypeCalls/{sample}.{tool}.calls.bcf.csi" % OUT_FOLDER,
+            "%s/{sample}/GenotypeCalls/{sample}.{tool}.indels.bcf" % OUT_FOLDER,
             sample=[
                 s for s in SAMPLES
-                for tool in TOOLS_WITH_SAM_OUTPUT
-                if species_configs[sample_to_organism[s]]["analyses_to_run"][tool]["status"] is True
-                and species_configs[sample_to_organism[s]]["analyses_to_run"]["bcftools_index"]["status"] is True
+                if species_configs[sample_to_organism[s]]["analyses_to_run"]["bcftools_view_filter"]["status"] is True
             ],
             tool=TOOLS_WITH_SAM_OUTPUT
         ),
+        bam_bai_targets,
+        bcf_csi_targets  # dynamically include all BCF CSI indexes
+
 
 include : "rules/db_setups.smk"
 include : "rules/finders.smk"
