complete LEG with summary, GAS with summary, MGK without summary

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ examples/results/
 examples/Dataset/reads/*gz
 resources/
 !resources/Legionella/lag1_reference.fasta
+!resources/Spyogenes/emm_alleles.fasta
