--- a/config/config.yaml
+++ b/config/config.yaml
@@ -88,8 +88,8 @@ analysis_settings:
     meningotype:
         yaml : ../envs/meningotype.yaml
     
-    SB_summary:
-        yaml : ../envs/SB_summary.yaml
+    SB_summarizers:
+        yaml : ../envs/SB_summarizers.yaml
             
     # Illumina lineage determination (commented out for now):
     # reference_fasta_file: /home/simonescrima/Desktop/ssi_analysis_utility/resources/lineage_determination/MGAS5005.fasta  # Fasta file for reference genome
