--- a/workflow/configs_species/E.coli.yaml
+++ b/workflow/configs_species/E.coli.yaml
@@ -113,4 +113,10 @@ analyses_to_run:
         status : False
         Title : Summarize Streptococcus pyogenes results to tsv
 
+
+    Hinfluenzae_biotype:
+        status : False
+        Title : Biotyping of Haemophilus influenzae
+        biotype_gene_references: resources/Hinfluenzae/biotype_gene_references.fasta
+
         
