--- a/workflow/configs_species/Hinfluenzae.yaml
+++ b/workflow/configs_species/Hinfluenzae.yaml
@@ -114,6 +114,6 @@ analyses_to_run:
         Title : Summarize Streptococcus pyogenes results to tsv
 
     Hinfluenzae_biotype:
-        status : False
+        status : True
         Title : Biotyping of Haemophilus influenzae
         biotype_gene_references: resources/Hinfluenzae/biotype_gene_references.fasta
