--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -91,7 +91,7 @@ bcf_csi_targets = expand(
         and species_configs[sample_to_organism[s]]["analyses_to_run"]["bcftools_index"]["status"] is True
     ],
     tool=TOOLS_WITH_SAM_OUTPUT,
-    tag=["mpileup", "calls", "indels"]  #this enables indexing of all bcf files
+    tag=["calls", "indels"]  #this enables indexing of all bcf files
 )
 ##############################################################################
 #
