Environment made less version specific
Environment couldn't be installed on local system, so removed a handfull of dependencies and removed version requirements

--- a/workflow/envs/htslib.yaml
+++ b/workflow/envs/htslib.yaml
@@ -1,13 +1,7 @@
 channels:
   - bioconda
   - conda-forge
-  - defaults
 dependencies:
-  - htslib=1.16
-  - samtools=1.16
-  - bcftools=1.16
-  - libcurl=7.88.1
-  - libnghttp2=1.51.0
-  - c-ares=1.18.1
-  - libdeflate=1.13
-  - openssl=1.1.1t
+  - htslib
+  - samtools
+  - bcftools
