--- a/workflow/configs_species/C.diff.yaml
+++ b/workflow/configs_species/C.diff.yaml
@@ -26,6 +26,12 @@ analyses_to_run:
         ID: 92
         input_folder: Cdiff_KMA_Toxin
         additional_option : --Gene_list tcdA tcdB tcdC cdtAB --organism "Clostridioides difficile" --suffix tsv
+        thresholds:
+            tcdA: [90, 90, 10]
+            tcdB: [90, 90, 10]
+            tcdC: [90, 90, 10]
+            cdtAB: [90, 90, 10]
+            other: [98, 98, 10]
 
     emm_typing: 
         status : False
