updated assembly options, and tools to include spades. Skesa unavailable for MacOS

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -72,8 +72,8 @@ analysis_settings:
     mlst:
         yaml : ../envs/mlst.yaml
     
-    skesa:
-        yaml : ../envs/skesa.yaml
+    spades:
+        yaml : ../envs/spades.yaml
             
     # Illumina lineage determination (commented out for now):
     # reference_fasta_file: /home/simonescrima/Desktop/ssi_analysis_utility/resources/lineage_determination/MGAS5005.fasta  # Fasta file for reference genome
