modularized the repeat identification, works as a rule for all samples and all assemblies set as true

--- a/workflow/configs_species/C.diff.yaml
+++ b/workflow/configs_species/C.diff.yaml
@@ -116,6 +116,13 @@ analyses_to_run:
     skesa:
         status : False
 
+    Repeat_identifier:
+        status : True
+        Title : Repeat identifier
+        ID: 92
+        repeats: TR6 TR10 TRST 
+        database: resources/Clostridioides_difficile_db/TRST
+
     samtools_view:
         status : True
         Title : samtools filtering
