--- a/config/config.yaml
+++ b/config/config.yaml
@@ -74,7 +74,10 @@ analysis_settings:
     
     spades:
         yaml : ../envs/spades.yaml
-            
+    
+    Repeat_identifier:
+        yaml: ../envs/python_functions.yaml
+
     # Illumina lineage determination (commented out for now):
     # reference_fasta_file: /home/simonescrima/Desktop/ssi_analysis_utility/resources/lineage_determination/MGAS5005.fasta  # Fasta file for reference genome
     # lineage_variant_file: /home/simonescrima/Desktop/ssi_analysis_utility/resources/lineage_determination/Spyogenes_LOCs.tsv  # File with lineage variants
