--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -65,6 +65,7 @@ database_path = config['input_manager']['database_path']
 ### Define rules where samtools is necessary
 
 TOOLS_WITH_SAM_OUTPUT = ["Cdiff_KMA_Toxin"]
+ASM_TO_REPEAT_IDENTIFICATION = ["spades","skesa"]
 
 # ------------------ BAM BAI targets generated automatically ------------------
 
@@ -191,7 +192,7 @@ rule all:
             out=OUT_FOLDER
         ),
         expand(
-            "%s/{sample}/spades/" % OUT_FOLDER,
+            "%s/{sample}/spades/contigs.fasta" % OUT_FOLDER,
             sample=[
                 s for s in SAMPLES 
                 if species_configs[sample_to_organism[s]]["analyses_to_run"]["spades"]["status"] is True
@@ -203,6 +204,19 @@ rule all:
                 s for s in SAMPLES 
                 if species_configs[sample_to_organism[s]]["analyses_to_run"]["skesa"]["status"] is True
             ]
+        ),
+        expand(
+            "%s/{sample}/Repeat_identifier/{assembler}_{sample}_repeat.tsv" % OUT_FOLDER,
+            sample=[
+                s for s in SAMPLES for assembler in ASM_TO_REPEAT_IDENTIFICATION
+                if species_configs[sample_to_organism[s]]["analyses_to_run"]["Repeat_identifier"]["status"] is True
+                and species_configs[sample_to_organism[s]]["analyses_to_run"][assembler]["status"] is True
+            ], # creates a list of samples needed to match with each assembly -> e.g ["SRR1", "SRR1", "SRR2", "SRR2"]
+            assembler=[
+                assembler for s in SAMPLES for assembler in ASM_TO_REPEAT_IDENTIFICATION
+                if species_configs[sample_to_organism[s]]["analyses_to_run"]["Repeat_identifier"]["status"] is True
+                and species_configs[sample_to_organism[s]]["analyses_to_run"][assembler]["status"] is True
+            ] # creates a list of assembly tools needed to match with each sample -> e.g ["spades", "skesa","spades", "skesa"] to create all combinations of samples and assembly tools
         ),
         expand(
             "%s/{sample}/GenotypeCalls/{sample}.{tool}.calls.bcf" % OUT_FOLDER,
@@ -220,7 +234,6 @@ rule all:
         ),
         bam_bai_targets,
         bcf_csi_targets  # dynamically include all BCF CSI indexes
-
 
 include : "rules/db_setups.smk"
 include : "rules/finders.smk"
