--- a/workflow/envs/python_functions.yaml
+++ b/workflow/envs/python_functions.yaml
@@ -7,6 +7,7 @@ dependencies:
   - python=3.10
   - pandas
   - pyyaml
+  - biopython
   - pip
   - pip:
       - typer  # optional if you later switch to it
