tmp change for variant to add the variation cdiff snakemake rule

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -81,6 +81,8 @@ analysis_settings:
     Repeat_identifier:
         yaml: ../envs/python_functions.yaml
 
+    Variant_identifier:
+        yaml: ../envs/python_functions.yaml
     # Illumina lineage determination (commented out for now):
     # reference_fasta_file: /home/simonescrima/Desktop/ssi_analysis_utility/resources/lineage_determination/MGAS5005.fasta  # Fasta file for reference genome
     # lineage_variant_file: /home/simonescrima/Desktop/ssi_analysis_utility/resources/lineage_determination/Spyogenes_LOCs.tsv  # File with lineage variants
