--- a/workflow/envs/python_functions.yaml
+++ b/workflow/envs/python_functions.yaml
@@ -8,6 +8,7 @@ dependencies:
   - pandas
   - pyyaml
   - biopython
+  - pysam
   - pip
   - pip:
       - typer  # optional if you later switch to it
