--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -232,6 +232,14 @@ rule all:
             ],
             tool=TOOLS_WITH_SAM_OUTPUT
         ),
+        expand(
+            "%s/{sample}/GenotypeCalls/{sample}.{tool}.variants.tsv" % OUT_FOLDER,
+            sample=[
+                s for s in SAMPLES
+                if species_configs[sample_to_organism[s]]["analyses_to_run"]["Variant_detection"]["status"] is True
+            ],
+            tool=TOOLS_WITH_SAM_OUTPUT
+        ),
         bam_bai_targets,
         bcf_csi_targets  # dynamically include all BCF CSI indexes
 
