--- a/workflow/configs_species/C.diff.yaml
+++ b/workflow/configs_species/C.diff.yaml
@@ -162,24 +162,21 @@ analyses_to_run:
         ID: 93
         additional_option : --gene_list tcdC --organism "Clostridioides difficile" --suffix tsv
         genomic_coord : resources/Clostridioides_difficile_db/Toxin/Cdiff_Toxin.bed6
-        snp_info:
-            snp_1: [117,"A","T","tcdC"] # [genomic position within the loci, reference, alternative]
+        snp_info: #https://pubmed.ncbi.nlm.nih.gov/24374512/
+            snp_117: [117,"A","T","tcdC","-"] # [genomic position within the loci, reference, alternative]
+            snp_184: [184,"C","T","tcdC","-"]
         deletion_regions:
-            del117_1: [117,118]
             del330_347_18: [330, 347] # [coordinate start within the region, coordinate end within the region , percent N in consensus region]
             del301_336_36: [301, 336]
             del341_379_39: [341, 379]
             del313_366_54: [313, 366]
         deletion_consensus_thresholds:
-            del117_1: [99]
             del330_347_18: [85]
             del301_336_36: [70]
             del341_379_39: [70]
             del313_366_54: [70]
         variant_gt_thresholds:
-            del117_1: [0.7, 1, 1]
             del330_347_18: [0.10,5,10]
             del301_336_36: [0.10,5,10]
             del341_379_39: [0.10,5,10]
             del313_366_54: [0.10,5,10]
-        #
